syntax = "proto3";

option csharp_namespace = "EchoClip.gRPC";

package greet;

service GreeterController {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
